# semantic-ids-llm

./: .gitignore  LICENSE  README.md  demo.ipynb  pyproject.toml  setup.sh
notebooks/: 01-prep-items-and-sequences.ipynb  02-clean-descriptions.ipynb  03-clean-titles.ipynb  04-augment-metadata.ipynb  05-update-items-and-sequences.ipynb  06-get-semantic-ids-per-asin.ipynb  07-get-semantic-ids-to-asin-sequences.ipynb  08-prep-finetuning-data.ipynb  09-evaluate-sasrec-baseline.ipynb  10-evaluate-sasrec-semantic.ipynb
src/: device_manager.py  embed_items.py  finetune_qwen3_8b_full.py  finetune_qwen3_8b_vocab.py  logger.py  test_prompts.py  tokenize_items.py  train_rqvae.py  train_sasrec.py  train_sasrec_semantic_id.py
