[project]
name = "semantic-ids"
version = "0.1.0"
description = "Training an LLM-recommender hybrid that can converse in natural language and item IDs"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "google-genai>=1.30.0",
    "huggingface-hub>=0.34.4",
    "ipykernel>=6.29.5",
    "jupyter>=1.1.1",
    "jupyterlab>=4.4.4",
    "matplotlib>=3.10.3",
    "plotly>=6.2.0",
    "polars>=1.31.0",
    "pypdf2>=3.0.1",
    "python-dotenv>=1.1.1",
    "scikit-learn>=1.7.0",
    "seaborn>=0.13.2",
    "torch>=2.7.1",
    "transformers>=4.53.2",
    "trl>=0.20.0",
    "wandb>=0.21.0",
]
